--- a/Product_Management_UI/product_ui/src/App.css
+++ b/Product_Management_UI/product_ui/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -14,18 +15,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #4a5262;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(252, 252, 252);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #0a0b0b;
 }
 
 @keyframes App-logo-spin {
